# bulkin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  embed-shaders-linux.sh  embed-shaders.sh  gen-xcode.sh  new-file.sh  rm-file.sh
build-xcode/: CMakeCache.txt  cmake_install.cmake
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Debug/: bulkin
build-xcode/bulkin.xcodeproj/: project.pbxproj
build-xcode/bulkin.xcodeproj/project.xcworkspace/xcuserdata/matty.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/bulkin.xcodeproj/xcshareddata/xcschemes/: bulkin.xcscheme
build-xcode/bulkin.xcodeproj/xcuserdata/matty.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
build-xcode/bulkin.xcodeproj/xcuserdata/matty.xcuserdatad/xcschemes/: xcschememanagement.plist
bulkin/: Makefile  cmake_install.cmake
include/: buffer.h  bulkin.h  camera.h  constants.h  device.h  frag-shader.h  graphics-pipeline.h  level.h  light.h  model.h  quad.h  queue-family.h  stb_image.h  swapchain.h  texture.h  vert-shader.h  vertex.h
shaders/: compile-mac.sh  compile-slang-mac.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/: buffer.cpp  bulkin.cpp  camera.cpp  device.cpp  graphics-pipeline.cpp  level.cpp  main.cpp  model.cpp  quad.cpp  swapchain.cpp  texture.cpp
